Added query/key cache.

--- a/flux/registers_exploration.ipynb
+++ b/flux/registers_exploration.ipynb
@@ -51,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1062640ae124084bfbf899189bb7dfd",
+       "model_id": "5b5ea84a4ab04086938d6e84e233e654",
        "version_major": 2,
        "version_minor": 0
       },
@@ -63,16 +63,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b10fb6612bd84de58eec16ecf9e77c07",
+       "model_id": "8efa95caf4c148caac5940040f406704",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,6 +75,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n"
+     ]
     }
    ],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
     "reload(visualization)\n",
     "from visualization import plot_activation_by_layer, plot_activation_by_layer_og_ablated, interactive_image_activation, norm_tokens\n",
     "\n",
-    "cache_pirate = single_layer_ablation_with_cache(Ablation.get_ablation(\"nothing\"), prompt=PROMPT_COUPLE, layer=2, vanilla_prompt=PROMPT_PIRATE)[1]\n",
+    "cache_pirate = single_layer_ablation_with_cache(Ablation.get_ablation(\"nothing\"), prompt=PROMPT_PIRATE, layer=2, vanilla_prompt=PROMPT_PIRATE)[1]\n",
     "display(interactive_image_activation(cache_pirate))"
    ]
   },
@@ -298,6 +298,45 @@
     "fig.colorbar(im, ax=ax, label='Log Count')\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's have a look at Queries and keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from attention_cache import set_cached_attention_processor\n",
+    "\n",
+    "cache = set_cached_attention_processor(pipe)\n",
+    "_ = single_layer_ablation_with_cache(Ablation.get_ablation(\"nothing\"), prompt=PROMPT_PIRATE, layer=2, vanilla_prompt=PROMPT_PIRATE)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 24, 4608, 128])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cache[\"query\"][0].shape"
    ]
   }
  ],
